2007-10-17  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc.el (vc-diff-sentinel, vc-diff-internal): Revert some change in the
	behavior unrelated to filesets.

2007-10-17  Chong Yidong  <cyd@stupidchicken.com>

	* longlines.el (longlines-wrap-follows-window-size): Integer value
	specifies wrapping margin.
	(longlines-mode, longlines-window-change-function):
	Set window-specific wrapping margin based on the above.

2007-10-17  John Wiegley  <johnw@newartisans.com>

	* eshell/esh-cmd.el (eshell-complex-commands): Add "ls".

2007-10-17  Dan Nicolaescu  <dann@ics.uci.edu>

	* server.el (server-process-filter): Only set display if X11 is
	supported.

2007-10-17  Glenn Morris  <rgm@gnu.org>

	* progmodes/cc-menus.el (cc-imenu-c++-generic-expression):
	Tweak regexp to avoid stack overflow.

2007-10-16  Stefan Monnier  <monnier@iro.umontreal.ca>

	* simple.el (reindent-then-newline-and-indent): Don't assume that
	indent-according-to-mode preserves point.

2007-10-16  Juanma Barranquero  <lekktu@gmail.com>

	* bs.el (bs--make-header-match-string, bs-show-in-buffer)
	(bs--nth-wrapper): Simplify.
	(bs-select, bs--insert-one-entry): Simplify.  Use `when'.
	(bs-buffer-list): Simplify.  Use `when'.  Use `string-match-p'.
	(bs-sort-buffer-interns-are-last): Use `string-match-p'.
	(bs-attributes-list, bs-max-window-height, bs-must-always-show-regexp)
	(bs-maximal-buffer-name-column, bs-minimal-buffer-name-column)
	(bs-configurations, bs-default-configuration)
	(bs-alternative-configuration, bs-cycle-configuration-name)
	(bs-string-show-always, bs-string-show-never, bs-string-current)
	(bs-string-current-marked, bs-string-marked, bs-string-show-normally)
	(bs-sort-functions, bs-default-sort-name): Remove * in docstrings.
	(bs--redisplay, bs--goto-current-buffer, bs--current-buffer, bs-delete)
	(bs-apply-sort-faces, bs-next-config-aux): Use `when'.
	(bs--window-config-coming-from): Revert 2006-11-09 change.
	(bs--restore-window-config): Keep the selected frame.