@@ -325,7 +325,10 @@ message."
 
 (defun server-select-display (display)
   ;; If the current frame is on `display' we're all set.
-  (unless (equal (frame-parameter (selected-frame) 'display) display)
+  ;; Similarly if we are unable to open a frames on other displays, there's
+  ;; nothing more we can do.
+  (unless (or (not (fboundp 'make-frame-on-display))
+              (equal (frame-parameter (selected-frame) 'display) display))
     ;; Otherwise, look for an existing frame there and select it.
     (dolist (frame (frame-list))
       (when (equal (frame-parameter frame 'display) display)
@@ -831,11 +834,7 @@ The following commands are accepted by the client:
 		 ;; Open X frames on the given display instead of the default.
 		 ((and (equal "-display" arg)
                        (string-match "\\([^ ]*\\) " request))
-		  ;; Only set `display' if X is supported. 
-		  ;; Emacsclient cannot know if emacs supports X and
-		  ;; it will send -display anyway.
-		  (when (memq 'x frame-creation-function-alist)
-		    (setq display (match-string 1 request)))
+                  (setq display (match-string 1 request))
 		  (setq request (substring request (match-end 0))))
 
 		 ;; -window-system:  Open a new X frame.
